src/components/Popper/Menu/Menu.module.scss
// Menu wrapper
.menu-list {
  position: relative;
  width: 224px;

  &::before {
    content: '';
    position: absolute;
    top: -10%;
    right: 0;
    border: 26px solid;
    border-color: transparent transparent #ffffff transparent;
  }

  .menu-popper {
    padding: 8px 0;
  }

  .menu-item {
    margin-left: 0;
  }
}

// Menu items
.menu-item {
  width: 100%;
  justify-content: flex-start;
  border-radius: 0;
  font-weight: 600;
  padding: 11px 16px;
  line-height: 1.8rem;

  &:hover {
    background-color: rgba(22, 24, 35, 0.03);
  }

  &.separate {
    border-top: 1px solid rgba(22, 24, 35, 0.12);
  }
}

// Header
.header {
  position: relative;
  height: 50px;
  margin-top: -8px;
}

.back-btn {
  cursor: pointer;
  width: 50px;
  height: 100%;
  background-color: transparent;
}

.header-title {
  display: inline-block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

